# wild_visual_navigation

./: .env  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled Document 1  environment.yaml  experiment_config.json  quick_start.py  requirements.txt  rosbag_comparison_output.txt  setup.py  test.yaml  try.py  try.xml
src/footcontact_history/: CMakeLists.txt  README.md  package.xml
src/footcontact_history/cfg/: params.yml
src/footcontact_history/launch/: all_feet.launch
src/footcontact_history/scripts/: footcontact_history_node.py
src/wild_visual_navigation_msgs/: CMakeLists.txt  package.xml
src/wild_visual_navigation_msgs/msg/: CustomState.msg  FeatExtractorOutput.msg  FeatInfo.msg  PhyDecoderOutput.msg  PlaneEdge.msg  StampedFloat32MultiArray.msg  SystemState.msg
src/wild_visual_navigation_ros/: CMakeLists.txt  package.xml
src/wild_visual_navigation_ros/launch/: frame.rviz  play.launch  play.rviz
src/wild_visual_navigation_ros/scripts/: Feat_extractor_node.py  Main_process_node.py  Phy_decoder_node.py  Phy_decoder_node_old.py  baseline_pub.py  baseline_pub_old.py  main_node.py  main_node_old.py  msg_to_transmatrix.py  play_rosbags.sh  real_time_plotter.py  ros_converter.py  test_camera_tf.py  test_converter.py  test_intrinsics.py  test_manager.py  test_phy_decoder.py  tf_playground.py  try.py
wild_visual_navigation_anymal/: CMakeLists.txt  README.md  package.xml
wild_visual_navigation_anymal/config/elevation_mapping_cupy/: anymal_parameters.yaml  anymal_sensor_parameter.yaml
wild_visual_navigation_anymal/config/field_local_planner/: rmp.yaml
wild_visual_navigation_anymal/config/procman/: record_rosbags.pmd  replay.pmd  robot.pmd
wild_visual_navigation_anymal/config/recording/: create_open_source_rosbags.yaml  dodo.yaml  start_recording.sh  stop_recording.sh
wild_visual_navigation_anymal/config/rviz/: anymal.rviz
wild_visual_navigation_anymal/launch/: elevation_mapping_cupy.launch  overlay_images.launch  resize_hdr.launch  resize_images_alphasense.launch  resize_images_wide_angle_dual.launch  resize_images_wide_angle_front.launch  resize_images_wide_angle_rear.launch  robot.launch  robot_jetson.launch  robot_npc.launch  robot_replay.launch  view.launch  wild_visual_navigation.launch
wild_visual_navigation_anymal/launch/deprecated/: raw_image_pipeline_perugia.launch  trajectory_base_map_new.launch
wild_visual_navigation_anymal/scripts/: anymal_msg_converter_node.py  anymal_msg_with_latent_converter_node.py  policy_debug_info_converter_node.py
wild_visual_navigation_anymal/scripts/open_source_rosbag_converter/: convert_to_public_format.py  encoding_fixer.py  store_images_readme_preview.py
wild_visual_navigation_anymal/src/: anymal_msg_converter_cpp_node.cpp
wild_visual_navigation_jackal/: CMakeLists.txt  README.md  package.xml
wild_visual_navigation_jackal/Media/models/: outdoor.dae
wild_visual_navigation_jackal/config/rviz/: open_source.rviz
wild_visual_navigation_jackal/config/wild_visual_navigation/: camera.yaml  jackal.yaml
wild_visual_navigation_jackal/launch/: sim.launch  teleop.launch  view.launch  wild_visual_navigation.launch
wild_visual_navigation_jackal/scripts/: carrot_follower.py  gazebo_world_publisher.py  jackal_state_converter_node.py
wild_visual_navigation_jackal/urdf/: depth_camera.xacro  extras.xacro  load_xacro.sh
wild_visual_navigation_jackal/worlds/: outdoor.world
wild_visual_navigation_ros/: CMakeLists.txt  README.md  package.xml  setup.py
wild_visual_navigation_ros/config/elevation_mapping_cupy/: anymal_parameters.yaml  anymal_plugin_config.yaml  anymal_sensor_parameter.yaml  wvn_plugin_config.yaml  wvn_sensor_parameter.yaml
wild_visual_navigation_ros/config/field_local_planner/: filter_chain.yaml  rmp.yaml
wild_visual_navigation_ros/config/hdr_cam/: hdr_cam_config.yaml
wild_visual_navigation_ros/config/parameters/: default.yaml
wild_visual_navigation_ros/config/procman/: replay.pmd  robot.pmd  robot_dodo.pmd  video.pmd
wild_visual_navigation_ros/config/recording/: dodo.yaml  dodo_minimal.yaml  open_source.yaml  start_recording.sh
wild_visual_navigation_ros/config/rqt/: input_traversability_images.perspective
wild_visual_navigation_ros/config/rqt_multiplot/: learning.xml
wild_visual_navigation_ros/config/rviz/: anymal.rviz  anymal_debug.rviz  anymal_dodo.rviz  anymal_rerun_wvn.rviz  anymal_traversability_comparison.rviz  anymal_uni_parks_loop.rviz  anymal_video_perugia.rviz  gps_trajectory.rviz  open_source.rviz  video.rviz
wild_visual_navigation_ros/config/wild_anomaly_detection/: wad_1cls.yaml  wad_2cls.yaml
wild_visual_navigation_ros/config/wild_visual_navigation/: default.yaml  resized_all.yaml  resized_wide_angle_dual.yaml
wild_visual_navigation_ros/launch/: anymal_semantic_elevation_single.launch  elevation_mapping_cupy.launch  field_local_planner.launch  overlay_images.launch  procman.launch  record_rosbag_debug.launch  replay_anymal_rviz.launch  replay_launch.launch  replay_traj.launch  resize_images.launch  resize_images_hdr.launch  resize_images_wide_angle_front.launch  resize_images_wide_angle_rear.launch  robot.launch  shift_gridmaps.launch  smart_carrot.launch  view.launch  wild_anomaly_detection.launch  wild_visual_navigation.launch  wild_visual_navigation_node.launch
wild_visual_navigation_ros/launch/anymal/: elevation_mapping_cupy.launch  robot.launch  (+1 more)
wild_visual_navigation_ros/scripts/: change_image_encoding.py  demo_ros_node.py  gps_to_tf_publisher.py  histogram.py  odom_to_tf_publisher.py  overlay_images.py  path_length.py  pickle_traversability_estimator.py  ros_visualizer.py  rosbag_play.sh  rotate_image.py  shift_gridmap.py  smart_carrot.py  system_snapshot.py  wild_anomaly_detection_1cls_node.py  wild_anomaly_detection_2cls_node.py  wild_visual_navigation_node.py  wvn_feature_extractor.py  wvn_feature_extractor_node.py  wvn_learning_node.py
wild_visual_navigation_sim/: CMakeLists.txt  README.md  package.xml
wild_visual_navigation_sim/launch/: sim.launch
wild_visual_navigation_sim/worlds/: outdoor.world  scenario.world
(+387 files in other folders)
