<?xml version="1.0"?>
<package format="2">
    <name>footcontact_history </name>
    <version>0.0.0</version>
    <description>The footcontact_history package</description>
    <maintainer email="jonfrey@ethz.ch">jonfrey</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>tf2_ros</exec_depend>


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->

    </export>
</package>